# zlata_say

./: LICENSE  README.md  pyproject.toml
zlata_say/: __init__.py  __main__.py  core.py
